--- a/index.html
+++ b/index.html
@@ -33,36 +33,45 @@ https://cdn.jsdelivr.net/npm/@gouvfr/dsfr@1.12.1/dist/dsfr.min.css
 </header>
 
 
-<div class="fr-container" id="cards-container">
+<div class="fr-container">
   <div class="fr-grid-row fr-grid-row--gutters fr-mt-12v">
-  <div class="fr-col-12 fr-col-md-12">
-      <ul class="fr-btns-group fr-btns-group--lg">
-          <li>
-            <a href="mailto:julien.dauphant@beta.gouv.fr" class="fr-btn">
-                    Besoin d'aide ? contactez-nous : julien.dauphant@beta.gouv.fr
-            </a>
-          </li>
-      </ul>
+    <div class="fr-col-12 fr-col-md-12">
+        <ul class="fr-btns-group fr-btns-group--lg">
+            <li>
+              <a href="mailto:julien.dauphant@beta.gouv.fr" class="fr-btn">
+                      Besoin d'aide ? contactez-nous : julien.dauphant@beta.gouv.fr
+              </a>
+            </li>
+        </ul>
     </div>
-  </div>
-</div>
-
-<div class="fr-container" id="cards-container">
-  <div class="fr-grid-row fr-grid-row--gutters fr-mt-12v" id="cards-row">
-    <!-- Les cartes seront insérées ici -->
-  </div>
-</div>
-
-<div class="fr-container" id="cards-container">
-  <div class="fr-grid-row fr-grid-row--gutters fr-mt-12v">
-  <div class="fr-col-12 fr-col-md-12">
-      <ul class="fr-btns-group fr-btns-group--lg">
-          <li>
-            <a href="mailto:julien.dauphant@beta.gouv.fr" class="fr-btn">
-                    Besoin d'aide ? contactez-nous : julien.dauphant@beta.gouv.fr
-            </a>
-          </li>
-      </ul>
+    <div class="fr-col-12 fr-col-md-12">
+      <h1>
+      Disponible
+      </h1>
+    </div>
+    <div class="fr-col-12 fr-col-md-12">
+        <div class="fr-grid-row fr-grid-row--gutters" id="cards-row-disponible">
+        <!-- Les cartes seront insérées ici -->
+      </div>
+    </div>
+     <div class="fr-col-12 fr-col-md-12">
+      <h1>
+      Bientôt disponible
+      </h1>
+    </div>
+    <div class="fr-col-12 fr-col-md-12">
+        <div class="fr-grid-row fr-grid-row--gutters " id="cards-row-bientot">
+        <!-- Les cartes seront insérées ici -->
+      </div>
+    </div>
+    <div class="fr-col-12 fr-col-md-12">
+        <ul class="fr-btns-group fr-btns-group--lg">
+            <li>
+              <a href="mailto:julien.dauphant@beta.gouv.fr" class="fr-btn">
+                      Besoin d'aide ? contactez-nous : julien.dauphant@beta.gouv.fr
+              </a>
+            </li>
+        </ul>
     </div>
   </div>
 </div>
@@ -112,25 +121,24 @@ https://cdn.jsdelivr.net/npm/@gouvfr/dsfr@1.12.1/dist/dsfr.min.css
     </div>
   </div>
 </footer>
-
 <script>
 async function fetchDataAndGenerateHTML() {
     const response = await fetch('https://grist.incubateur.net/api/docs/9Ln1M4WDNZxZ/tables/1/records');
     const data = await response.json();
     const records = data.records;
-    const cardsRow = document.getElementById('cards-row');
+    const cardsRowDisponible = document.getElementById('cards-row-disponible');
+    const cardsRowBientot = document.getElementById('cards-row-bientot');
 
-    // Récupérer tous les types d'accès possibles
+    // Récupérer tous les types d'accès possibles en excluant la première valeur de chaque liste
     const allAccessTypes = new Set();
     records.forEach(record => {
-        record.fields.Accessible_depuis_.forEach(access => {
-            if (access !== 'L') {
-                allAccessTypes.add(access);
-            }
+        record.fields.Accessible_depuis_.slice(1).forEach(access => {
+            allAccessTypes.add(access);
         });
     });
 
-    let cardsHtml = '';
+    let cardsDisponibleHtml = '';
+    let cardsBientotHtml = '';
 
     records.forEach(record => {
         const fields = record.fields;
@@ -146,8 +154,8 @@ async function fetchDataAndGenerateHTML() {
 
         const apiBadge = `<li><p class="fr-badge ${fields.API ? 'fr-badge--success' : 'fr-badge--error'}">API</p></li>`;
 
-        cardsHtml += `
-            <div class="fr-col-12 fr-col-md-6">
+        const cardHtml = `
+            <div class="fr-col-12 fr-col-md-4">
                 <div class="fr-card fr-enlarge-link fr-card--horizontal">
                     <div class="fr-card__body">
                         <div class="fr-card__content">
@@ -157,9 +165,9 @@ async function fetchDataAndGenerateHTML() {
                                 <ul class="fr-tags-group">
                                     <li><p class="fr-tag">${fields.Fournisseur}</p></li>
                                 </ul>
-                                <ul class="fr-badges-group">
+                                Accessible depuis : <ul class="fr-badges-group">
                                     ${accessBadges}
-                                </ul>
+                                </ul><br>
                                 <ul class="fr-badges-group">
                                     ${apiBadge}
                                 </ul>
@@ -168,13 +176,21 @@ async function fetchDataAndGenerateHTML() {
                     </div>
                 </div>
             </div>`;
+
+        if (fields.Disponibilite === 'Disponible') {
+            cardsDisponibleHtml += cardHtml;
+        } else {
+            cardsBientotHtml += cardHtml;
+        }
     });
 
-    cardsRow.innerHTML = cardsHtml;
+    cardsRowDisponible.innerHTML = cardsDisponibleHtml;
+    cardsRowBientot.innerHTML = cardsBientotHtml;
 }
 
 fetchDataAndGenerateHTML();
 </script>
+
 
 
 
