--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@ https://cdn.jsdelivr.net/npm/@gouvfr/dsfr@1.12.1/dist/dsfr.min.css
           </div>
         </div>
     </div>
+    <div class="fr-notice fr-notice--warning">
+        <div class="fr-container">
+            <div class="fr-notice__body">
+                <p>
+                    <span class="fr-notice__title">En cours de construction</span>
+                    <span class="fr-notice__desc">Le contenu est en cours de rédaction, les informations présentes peuvent être incorrectes.</span>
+                </p>
+                <button title="Masquer le message" onclick="const notice = this.parentNode.parentNode.parentNode; notice.parentNode.removeChild(notice)" id="button-1305" class="fr-btn--close fr-btn">Masquer le message</button>
+            </div>
+        </div>
+    </div>
 </header>
 
 
