--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ https://cdn.jsdelivr.net/npm/@gouvfr/dsfr@1.12.1/dist/dsfr.min.css
 </footer>
 <script>
 async function fetchDataAndGenerateHTML() {
-    const response = await fetch('https://grist.incubateur.net/api/docs/9Ln1M4WDNZxZ/tables/1/records');
+    const response = await fetch('https://grist.numerique.gouv.fr/api/docs/9Ln1M4WDNZxZ/tables/1/records');
     const data = await response.json();
     const records = data.records;
     const cardsRowDisponible = document.getElementById('cards-row-disponible');
