--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ https://cdn.jsdelivr.net/npm/@gouvfr/dsfr@1.12.1/dist/dsfr.min.css
                         </div>
                     </div>
                     <div class="fr-header__service">
-                        <a href="/" title="Accueil - [À MODIFIER - Nom du site / service] - Nom de l’entité (ministère, secrétariat d‘état, gouvernement)">
+                        <a href="/" title="Accueil - Offres Cloud Interministériel - DINUM">
                             <p class="fr-header__service-title">
                                 numerique.gouv.fr
                             </p>
@@ -46,6 +46,7 @@ https://cdn.jsdelivr.net/npm/@gouvfr/dsfr@1.12.1/dist/dsfr.min.css
 
 <div class="fr-container">
   <div class="fr-grid-row fr-grid-row--gutters fr-mt-12v">
+      <!--
     <div class="fr-col-12 fr-col-md-12">
         <ul class="fr-btns-group fr-btns-group--lg">
             <li>
@@ -55,6 +56,7 @@ https://cdn.jsdelivr.net/npm/@gouvfr/dsfr@1.12.1/dist/dsfr.min.css
             </li>
         </ul>
     </div>
+      -->
     <div class="fr-col-12 fr-col-md-12">
       <h1>
       Disponible
